<resources>
    <!-- Google Ads ID -->
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <!-- Facebook App ID -->
    <string name="facebook_app_id">1673826382890524</string>


    <string name="app_name">ImView</string>
    <string name="slogan">ImView - пожалуй одно из самых лучших мобильных приложений</string>

    <string name="main_activity_string">Главная</string>
    <string name="account_activity_string">Личный кабинет</string>
    <string name="settings_activity_string">Настройки</string>
    <string name="title_activity_image">ImageActivity</string>
    <string name="image_description">Image</string>
    <string name="title_activity_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>

    <string name="back_from_preference">Назад</string>
    <string name="featured_activity_string">Featured</string>
    <string name="abyss_activity_string">Abyss</string>
    <string name="comment_placeholder">Напиши нам что-нибудь</string>

    <!-- Network errors -->
    <string name="login_required">Требуется выполнить вход</string>
    <string name="network_unreachable">Сеть недоступна</string>
    <string name="time_limit_succeed">Время ожидания истекло</string>
    <string name="check_your_connection">Проверьте ваше соединение.</string>
    <string name="fill_all_fields_please">Заполните, пожалуйста, все поля</string>
    <string name="you_already_vote_for_this_comment">Вы уже голосовали за этот комментарий.</string>
    <string name="you_already_vote_for_this_image">Вы уже голосовали за это изображение.</string>
    <string name="server_error">Проблемы с сервером</string>

    <string name="action_new_image">Add new image</string>

    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="do_login">Войти</string>
    <string name="do_logout">Выйти</string>
    <string name="register">Создать аккаунт</string>
    <string name="cancel">Отмена</string>
    <string name="prompt_password">Пароль</string>
    <string name="prompt_username">Пользователь</string>
    <string name="or_you_can">Или вы можете</string>
    <string name="unhandled_error">Необработанная ошибка</string>
    <string name="save_cookies_at_close">Сохранять при закрытии</string>
    <string name="cookies">Cookies</string>
    <string name="authentication_activity_string">Аутентификация</string>
    <string name="authentication">Аутентификация</string>
    <string name="wrong_credentials">Неверные логин или пароль.</string>
    <string name="user_already_exist">Пользователь с таким именем уже существует</string>
    <string name="you_successful_logout">Вы успешно разлогинились</string>
    <string name="settings_activity_label">Настройки</string>
    <string name="tap_to_edit_caption">Отредактируйте подпись</string>
    <string name="open">открыть</string>
    <string name="publish">опубликовать</string>
    <string name="load_image_and_put_caption">Загрузите картинку и отредактируйте подпись</string>
    <string name="choose_image">Выберите изображение</string>
    <string name="save">Сохранить</string>
    <string name="image_saved">Изображение сохранено</string>
    <string name="bad_file">Плохой файл</string>
</resources>
