<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#19191C"
    tools:context=".ui.activity.CommentsActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/app_bar_layout"
        android:layout_marginBottom="@dimen/auth_buttons_margin"
        android:orientation="vertical"
        android:paddingLeft="40dp"
        android:paddingRight="40dp">

        <FrameLayout
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/auth_buttons_margin"
            android:layout_weight="1"
            android:background="@drawable/button_press"
            android:clickable="true">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@null"
                android:clickable="false"
                android:drawableLeft="@drawable/ic_vpn_key_white_24dp"
                android:drawablePadding="5dp"
                android:drawableStart="@drawable/ic_vpn_key_white_24dp"
                android:gravity="center"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:text="@string/do_login"
                android:textColor="@android:color/white" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/signup_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/auth_buttons_margin"
            android:layout_weight="1"
            android:background="@drawable/button_press"
            android:clickable="true">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@null"
                android:clickable="false"
                android:drawableLeft="@drawable/ic_assignment_ind_white_24dp"
                android:drawablePadding="5dp"
                android:drawableStart="@drawable/ic_assignment_ind_white_24dp"
                android:gravity="center"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:text="@string/register"
                android:textColor="@android:color/white" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/logout_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/auth_buttons_margin"
            android:layout_weight="1"
            android:background="@drawable/button_press"
            android:clickable="true">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@null"
                android:clickable="false"
                android:drawableLeft="@drawable/ic_exit_to_app_white_24dp"
                android:drawablePadding="5dp"
                android:drawableStart="@drawable/ic_exit_to_app_white_24dp"
                android:gravity="center"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:text="@string/do_logout"
                android:textColor="@android:color/white" />
        </FrameLayout>
    </LinearLayout>
</RelativeLayout>